# doc-docs

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yaml  python-publish.yaml
docs/: conf.py
docs/source/: conf.py  configurations.rst  index.rst
src/doc-docs/: __main__.py
src/doc_docs/: __init__.py  __main__.py
src/doc_docs/core/: config.py
