[project]
name = "doc-docs"
version = "0.1.3"
description = "Documentation documentation."
authors = [
    {name = "erinhmclark",email = "erinhannahmary.clark@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[tool.poetry.group.dev.dependencies]
autopep8 = "*"
sphinx = "^8.1.3"
sphinx-autoapi = "^3.4.0"
sphinxcontrib-mermaid = "^1.0.0"
sphinx-autobuild = "^2024.10.3"
sphinx-copybutton = "^0.5.2"
myst-parser = "^4.0.0"
furo = "^2024.8.6"


[project.scripts]
doc-docs = "doc_docs.__main__:main"

[project.urls]
documentation = "https://github.com/erinhmclark/doc-docs"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
